...
        DaySelect(modifier,dayName, viewModel, lat, lon, navController, forecastWeatherData, weatherData, lastUpdateTime)
        Spacer(modifier = Modifier.height(10.dp))
        IconButton(onClick = {
            navController.navigate(Routes.NewEventView.route+"/day")},
            modifier = Modifier
                .align(Alignment.End)
                .testTag("ADD_EVENT_BUTTON")
        ) {
            Icon(
                imageVector = Icons.Filled.AddCircle,
                contentDescription = stringResource(R.string.add_button),
                modifier = Modifier.size(30.dp)
            )
...
fun NavigationBar(navController: NavHostController) {
    Box(modifier = Modifier
        .fillMaxWidth()
        .size(50.dp)
        .background(MaterialTheme.colorScheme.primary),
    ){
        IconButton(onClick = { navController.popBackStack() }, modifier = Modifier.testTag("BACK_BUTTON")) {
            Icon(
                imageVector = Icons.Filled.KeyboardArrowLeft,
                contentDescription = stringResource(R.string.go_to_previous_page),
                modifier = Modifier.align(Alignment.CenterStart)

            )
...
