...
            contentAlignment = Alignment.BottomEnd
        ){
            IconButton(onClick = {
                navController.navigate(Routes.NewEventView.route + "/month") },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("create_event_view")
            ) {
                Icon(
                    imageVector = Icons.Filled.AddCircle,
                    contentDescription = "AddEvent",
                    modifier = Modifier.size(40.dp)
                )
...
